--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,31 @@
 @tailwind components;
 @tailwind utilities;
 
+
+/* optional: globals.css */
+.word-rotator {
+  height: 1em;
+  display: inline-block;
+  position: relative;
+}
+
+.word {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  text-align: center;
+}
+
+
+.glass-container {
+  position: relative;
+}
+
+.glass-container::before {
+  @apply absolute -inset-[10px] -z-10 rounded-xl border border-slate-700/10 bg-slate-800/10 dark:border-slate-100/20 dark:bg-slate-200/10 backdrop-blur-md;
+  content: "";
+}
+
 @layer utilities {
 
   .max-container {
